maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:94: error: not found: value Est
    Est=getIndication(X+1,Y)
    ^JediEscaper:98: error: not found: value Ouest
    Ouest = getIndication(X-1,Y)
    ^JediEscaper:102: error: not found: value Sud
    Sud=getIndication(X,Y+1)
    ^JediEscaper:106: error: not found: value Nord
    Nord=getIndication(X,Y-1)
    ^JediEscaper:122: error: type mismatch;
 found   : Unit
 required: Boolean
  if (choix = nord)
            ^JediEscaper:124: error: not found: value setPosition
    setPosition(X,Y-1)
    ^JediEscaper:126: error: type mismatch;
 found   : Unit
 required: Boolean
  if (choix = sud)
            ^JediEscaper:128: error: not found: value setPosition
    setPosition(X,Y+1)
    ^JediEscaper:130: error: type mismatch;
 found   : Unit
 required: Boolean
  if (choix = ouest)
            ^JediEscaper:132: error: not found: value setPosition
    setPosition(X-1,Y)
    ^JediEscaper:134: error: type mismatch;
 found   : Unit
 required: Boolean
  if (choix = est)
            ^JediEscaper:136: error: not found: value setPosition
    setPosition(X+1,Y)
    ^